update homepage path

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://ze-antunes.mgithub.io/website_pessoal/public/",
+  "homepage" : "https://ze-antunes.github.io/website_pessoal/",
   "name": "something",
   "version": "0.1.0",
   "private": true,
